<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/content_appbar"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
        
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/content_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="bottom"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/content_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"
                android:scaleType="centerCrop"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/image_gradient"/>
            
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/content_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>
            
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content_nestedscrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@drawable/shadow_reverse_view"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:layout_marginTop="40dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/content_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"

                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/content_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:textSize="16sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    android:layout_marginStart="30dp"
                    android:gravity="center_vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="2dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_access_time_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="5dp"/>
                        <TextView
                            android:id="@+id/content_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:textSize="16sp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="2dp">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_show_chart_black_24dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="5dp"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/content_rating"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"/>
                            <TextView
                                android:id="@+id/content_rating_count"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"/>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_movie_extra"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/content_media_money_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/budget"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:lineSpacingExtra="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/revenue"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:lineSpacingExtra="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/content_budget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="16sp"
                        android:lineSpacingExtra="10dp"/>

                    <TextView
                        android:id="@+id/content_revenue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="16sp"
                        android:lineSpacingExtra="10dp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_tvshow_extra"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="30dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:lineSpacingExtra="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/seasons_number"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        android:lineSpacingExtra="10dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/content_tvshow_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="16sp"
                        android:lineSpacingExtra="10dp"/>

                    <TextView
                        android:id="@+id/content_tvshow_numberseasons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="16sp"
                        android:lineSpacingExtra="10dp"/>

                </LinearLayout>
            </LinearLayout>

            <bg.devlabs.fullscreenvideoview.FullscreenVideoView
                android:id="@+id/content_video_player"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"/>

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/content_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                app:maxCollapsedLines="5"
                app:animDuration="400">

                <TextView
                    android:id="@+id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"

                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="16sp"
                    android:lineSpacingExtra="10dp"/>

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_gravity="right|bottom"
                    android:background="@android:color/transparent"/>
            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <LinearLayout
                android:id="@+id/content_seasons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/content_seasons"

                    android:textColor="@android:color/black"
                    android:textSize="22sp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/content_seasons_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_pictures_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/content_pictures"

                    android:textColor="@android:color/black"
                    android:textSize="22sp"/>

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/content_pictures_slider"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_margin="20dp"
                    app:sliderAnimationDuration="500"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderAutoCycleEnabled="false"
                    app:sliderCircularHandlerEnabled="true"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="25dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="1dp"
                    app:sliderIndicatorSelectedColor="@color/colorPrimary"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="1"
                    app:sliderStartAutoCycle="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_cast_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/content_cast"

                    android:textColor="@android:color/black"
                    android:textSize="22sp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/content_cast_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@android:color/transparent"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/content_progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">

        <ProgressBar
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/content_media_floating_button"
            android:layout_height="56dp"
            android:layout_width="56dp"
            app:fabCustomSize="56dp"
            android:layout_margin="24dp"
            android:src="@drawable/ic_bookmark_border_white_24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"

            android:visibility="visible"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>